Fix alignment of collapsibles in question headers

--- a/app/assets/stylesheets/components/_collapse.scss
+++ b/app/assets/stylesheets/components/_collapse.scss
@@ -48,6 +48,7 @@
   .collapsed ~ & {
     position: absolute;
     bottom: 0;
+    left: 0;
 
     &:before {
       content: "";
